# rust

./: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.auth  Dockerfile.gateway  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.local.json
combined/: Cargo.toml
combined/src/: main.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: config.rs  lib.rs  main.rs  openapi.rs  routes.rs  state.rs
crates/gateway/src/clients/: auth_client.rs  mod.rs  user_client.rs
crates/gateway/src/extractors/: mod.rs  validated_json.rs
crates/gateway/src/handlers/: auth_handler.rs  health_handler.rs  mod.rs  user_handler.rs
crates/gateway/src/middleware/: auth.rs  cache.rs  mod.rs  rate_limit.rs
crates/services/auth-service/: Cargo.toml
crates/services/auth-service/src/: config.rs  lib.rs  main.rs
crates/services/auth-service/src/client/: mod.rs  user_client.rs
crates/services/auth-service/src/grpc/: auth_grpc.rs  mod.rs
crates/services/auth-service/src/service/: auth_service.rs  mod.rs
crates/services/user-service/: Cargo.toml
crates/services/user-service/src/: config.rs  lib.rs  main.rs
crates/services/user-service/src/grpc/: mod.rs  user_grpc.rs
crates/services/user-service/src/infra/: db.rs  mod.rs
crates/services/user-service/src/infra/migrations/: m20240101_000001_create_users_table.rs
crates/services/user-service/src/repository/: mod.rs  user_repository.rs
crates/services/user-service/src/repository/entities/: mod.rs  user.rs
crates/services/user-service/src/service/: mod.rs  user_service.rs
crates/shared/common/: Cargo.toml
crates/shared/common/src/: config.rs  error.rs  lib.rs
crates/shared/domain/: Cargo.toml
crates/shared/domain/src/: constants.rs  error.rs  lib.rs  password.rs  user.rs
crates/shared/proto/: Cargo.toml  build.rs
crates/shared/proto/proto/: auth.proto  user.proto
crates/shared/proto/src/: lib.rs
src/: errors.rs  lib.rs  main.rs
src/api/: mod.rs  openapi.rs  routes.rs  state.rs
src/api/extractors/: mod.rs  validated_json.rs
src/api/handlers/: auth_handler.rs  mod.rs  user_handler.rs
src/api/middleware/: auth.rs  mod.rs  rate_limit.rs
src/cli/: args.rs  mod.rs
src/commands/: generate.rs  jobs.rs  migrate.rs  mod.rs  serve.rs
src/config/: constants.rs  mod.rs  settings.rs
src/domain/: mod.rs  password.rs  user.rs
src/infra/: cache.rs  mod.rs  unit_of_work.rs
src/infra/db/: mod.rs
src/infra/db/migrations/: m20240102_000001_add_soft_delete.rs  mod.rs
src/infra/repositories/: base.rs  mod.rs  user_repository.rs
src/infra/repositories/entities/: mod.rs  user.rs
src/jobs/: email_job.rs  mod.rs
src/services/: auth_service.rs  container.rs  mod.rs  user_service.rs
src/types/: mod.rs  pagination.rs  response.rs
src/utils/: mod.rs  templates.rs
tests/: api_test.rs  user_service_test.rs
