[package]
name = "rust-api-starter"
version = "0.1.0"
edition = "2021"
description = "A production-ready Rust API starter with Axum, SeaORM, and clean architecture"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/rust-api-starter"
keywords = ["axum", "api", "rest", "web", "starter"]
categories = ["web-programming", "web-programming::http-server"]

[features]
default = []
test-utils = ["mockall"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database - SeaORM
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.0"

# Cache - Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Background jobs - Apalis
apalis = "0.6"
apalis-sql = { version = "0.6", features = ["postgres"] }

# Security - JWT & Password
jsonwebtoken = "9"
argon2 = "0.5"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
async-trait = "0.1"
thiserror = "1"
validator = { version = "0.18", features = ["derive"] }
once_cell = "1"
regex = "1"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAPI documentation
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Optional dependencies for test utilities
mockall = { version = "0.13", optional = true }

[dev-dependencies]
sea-orm-cli = "1.0"
mockall = "0.13"
tokio-test = "0.4"
rust-api-starter = { path = ".", features = ["test-utils"] }
