[workspace]
resolver = "2"
members = [
    "crates/shared/domain",
    "crates/shared/common",
    "crates/shared/proto",
    "crates/services/auth-service",
    "crates/services/user-service",
    "crates/gateway",
    "combined",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# Web (for gateway)
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.0"

# Cache
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Security
jsonwebtoken = "9"
argon2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
validator = { version = "0.18", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }
once_cell = "1"
regex = "1"

# OpenAPI documentation
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Background jobs
apalis = "0.6"
apalis-sql = { version = "0.6", features = ["postgres"] }

# Testing
mockall = "0.13"
tokio-test = "0.4"

# Internal crates
domain = { path = "crates/shared/domain" }
common = { path = "crates/shared/common" }
proto = { path = "crates/shared/proto" }
auth-service = { path = "crates/services/auth-service" }
user-service = { path = "crates/services/user-service" }
gateway = { path = "crates/gateway" }
