[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gateway"
path = "src/main.rs"

[lib]
name = "gateway_lib"
path = "src/lib.rs"

[dependencies]
# Internal crates
domain = { workspace = true, features = ["openapi"] }
common = { workspace = true, features = ["cache"] }
proto = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# gRPC client
tonic = { workspace = true }

# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Cache
redis = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
clap = { workspace = true }
validator = { workspace = true }

# OpenAPI
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }

[features]
default = []
embedded = []
